commit 2 mobile responsivo

--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
 </head>
 <body>
   <header class="header-bg">
+
     <div class="header">
-      <div class="header-logo">
-          <img src="icons/LOGO BRANCO.png" alt="logo">
-      </div>
 
       <nav class="menu-bar" id="menu-bar">
           <div id="menu" onclick="onClickMenu()">
@@ -23,22 +21,25 @@
             <div id="bar2" class="bar"></div>
             <div id="bar3" class="bar"></div>
           </div>
-
           <div>
               <ul class="nav" id="nav">
-                <li class="lista"> <a href=""> Sobre nós </a></li>
+                <li> <a href=""> Sobre nós </a></li>
                 <li> <a href=""> Criação de sites </a></li>
                 <li> <a href=""> Criação de lojas </a></li>
                 <li> <a href=""> Gestão de redes sociais </a></li>
                 <li> <a href=""> Portfólio </a></li>
                 <li> <a href=""> Contato </a></li>
               </ul>
-              <div class="menu-bg" id="menu-bg"></div>
           </div>
       </nav>
     </div>
+  <div class="header-logo">
+    <div class="logo" id="logo">
+      <img src="icons/LOGO BRANCO.png" alt="logo">
+    </div>
+  </div>
   
-    <div class="header-headline">
+    <div class="header-headline" id="headline">
       <h1>Você no Digital</h1>
       <h2>Eleve sua empresa!</h2>
       <p>Soluções em sites, gestão de redes sociais e marketing digital</p>
